fix: tooltip z-index 应该比 modal 高，目前看来他应该是最高

--- a/packages/tooltip/tooltip.scss
+++ b/packages/tooltip/tooltip.scss
@@ -7,7 +7,8 @@
   top: 300px;
   left: 30px;
   padding: 4px;
-  z-index: 10;
+  // 弹窗 z-index 是 1000 多
+  z-index: 10000;
   max-width: 500px;
   word-break: break-all;
 
